--- a/src/App.css
+++ b/src/App.css
@@ -6,4 +6,26 @@
   align-items: center;
   gap: 16px;
 }
-
+.header{
+  background-color: #7560E8;
+  height: 450px;
+  width: 100%;
+}
+.title{
+  color: #61DBFB;
+  margin-top: 60px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.day{
+  color: #800080;
+}
+.cats-paradise > h1{
+  text-shadow: 2px 2px 0 #fff,2px 2px 0 rgba(0,0,0,.15)!important;
+  font-family: "Merriweather";
+  color: #283747;
+}
+.breeds{
+  font-size: 20px;
+}
