--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -20,6 +20,7 @@
 }
 .day{
   color: #800080;
+  font-weight: 700;
 }
 .cats-paradise > h1{
   text-shadow: 2px 2px 0 #fff,2px 2px 0 rgba(0,0,0,.15)!important;
@@ -28,4 +29,27 @@
 }
 .breeds{
   font-size: 20px;
+}
+.route{
+  display: flex;
+  flex-direction: row;
+  color: white;
+  justify-content: center;
+  font-size: 20px;
+}
+.home{
+  margin: 15px;
+  cursor: pointer;
+  color: white;
+  text-decoration: none;
+}
+.about{
+  margin: 15px;
+  cursor: pointer;
+  color: white;
+  text-decoration: none;
+}
+.dummydata{
+  margin: 15px;
+  cursor: pointer;
 }
