--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -7,29 +7,20 @@
   gap: 16px;
 }
 .header{
+  text-align: center;
   background-color: #7560E8;
-  height: 450px;
+  height: 30%;
   width: 100%;
+  padding-bottom: 16px;
 }
 .title{
   color: #61DBFB;
-  margin-top: 60px;
+  margin-top: 16px;
   display: flex;
   justify-content: center;
   flex-direction: column;
 }
-.day{
-  color: #800080;
-  font-weight: 700;
-}
-.cats-paradise > h1{
-  text-shadow: 2px 2px 0 #fff,2px 2px 0 rgba(0,0,0,.15)!important;
-  font-family: "Merriweather";
-  color: #283747;
-}
-.breeds{
-  font-size: 20px;
-}
+
 .route{
   display: flex;
   flex-direction: row;
@@ -57,7 +48,7 @@
   display: flex;
   justify-content: space-around;
   width: 100%;
-
+  gap: 16px;
 }
 .input{
   color: hsl(235, 24%, 19%);
@@ -70,24 +61,24 @@
   font-weight: bold;
   border:2px solid rgba(0,0,0,0.2);
   box-shadow: 0 1px 0 1px rgba(0,0,0,.03);
-  }
+}
 .input:hover {
   border-color: #888;
 }
 .divinput > select{
-display: block;
-font-size: 13px;
-font-family: 'Nunito Sans', sans-serif;
-font-weight: 400;
-width: 125px;
-cursor: pointer;
-height: 35px;
-border-radius: 5px;
-font-weight: bold;
-color: hsl(235, 24%, 19%);
-border:2px solid rgba(0,0,0,0.2);
-margin-bottom: 15px;
-box-shadow: 0 1px 0 1px rgba(0,0,0,.03);
+  display: block;
+  font-size: 13px;
+  font-family: 'Nunito Sans', sans-serif;
+  font-weight: 400;
+  width: 125px;
+  cursor: pointer;
+  height: 35px;
+  border-radius: 5px;
+  font-weight: bold;
+  color: hsl(235, 24%, 19%);
+  border:2px solid rgba(0,0,0,0.2);
+  margin-bottom: 15px;
+  box-shadow: 0 1px 0 1px rgba(0,0,0,.03);
 }
 .select:hover {
   border-color: #888;
@@ -102,4 +93,24 @@ box-shadow: 0 1px 0 1px rgba(0,0,0,.03);
 }
 .reset:hover {
   border-color: #888;
+}
+
+.light{
+  background-color: white;
+  color: black;
+}
+.dark{
+  background-color: #CFAFFF;
+  color: white;
+}
+.switch{
+  display: flex;
+  justify-content: right;
+  margin: 10px;
+}
+.homepage{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 16px;
 }
